--- a/server/config.toml
+++ b/server/config.toml
@@ -13,6 +13,9 @@ fields = []
 [resource]
 resource_dir = "./www/"
 default_page = "index.html"
+# list of resources that are allowed to be modified by PUT and POST requests
+user_writeable_file = []
+user_writeable_table = []
 # storing GET and POST requests
 request_storage = ""
 cache_enabled = false
