--- a/server/config.toml
+++ b/server/config.toml
@@ -13,12 +13,15 @@ fields = []
 [resource]
 resource_dir = "./www/"
 default_page = "index.html"
-# list of resources that are allowed to be modified by PUT and POST requests
-user_writeable_file = []
-user_writeable_table = []
-# storing GET and POST requests
-request_storage = ""
-cache_enabled = false
+# list of resources that are allowed to be modified by PUT, POST, PATCH and DELETE requests
+# acl_file is for files/directories and acl_table is for entries in the route_table
+acl_file = []
+acl_table = []
+# choose between "allow" - only the resources specified in acl_file and acl_table may be modified
+# or "deny" - every resource but the ones specifed may be modified
+acl_type = "allow"
+# cache for requested resources
+reponse_cache_enabled = true
 # table routing is priotitised over filesystem routing
 fs_routing = true
 table_routing = false
